force-app/main/default/objects/Community_Events__c/Community_Events__c.object-meta.xml
<CustomObject>
    <description>Used to store Events in the Community.  Events may or may not be associated with a Group.</description>
    <label>Community Event</label>
    <nameField>
        <displayFormat>EVENT.{yy}{mm}{0}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>