force-app/main/default/objects/Community_Events__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <description>Used to store the building name where the Event is taking place, if any.</description>
    <label>Building</label>
    <length>150</length>
    <type>Text</type>
</CustomField>