force-app/main/default/objects/Community_Events__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Provide a City for the Community Event Location</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>