force-app/main/default/objects/Community_Events__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Provide an email address to contact for more information about the Community Event.</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>