force-app/main/default/objects/Community_Events__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Provide a contact phone number for details about the Community Event</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>