force-app/main/default/objects/Community_Events__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Provide a description of the Community Event details and RSVP instructions (if any)</description>
    <label>Description</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>