force-app/main/default/objects/Community_Events__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>End Date/Time of the Community Event</description>
    <label>End</label>
    <type>DateTime</type>
</CustomField>