force-app/main/default/objects/Community_Events__c/fields/Event_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_SF_ID__c</fullName>
    <description>Represents the Salesforce 18 Digit Unique ID for the Event record.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the Salesforce 18 Digit Unique ID for the Event record.</inlineHelpText>
    <label>Event SF ID</label>
    <type>Text</type>
</CustomField>