force-app/main/default/objects/Community_Events__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Used to define a name for the event.  This field is mandatory.</description>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>