force-app/main/default/objects/Community_Events__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field drives whether the Community Event record is discoverable by other users in the Community who are not part of the group who created it.</description>
    <inlineHelpText>If you check this box, the Event will be discoverable to all users in the Community.</inlineHelpText>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>