force-app/main/default/objects/Community_Events__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <description>Use this to provide a room number for your event, if known.</description>
    <label>Room</label>
    <length>150</length>
    <type>Text</type>
</CustomField>