force-app/main/default/objects/Community_Events__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>Start Date/Time of the Community Event Record</description>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>