force-app/main/default/objects/Community_Events__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Provide a State for the Community Event location</description>
    <label>State</label>
    <length>15</length>
    <type>Text</type>
</CustomField>