force-app/main/default/objects/Community_Events__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>Provide a street address (number, street) for the Community Event location</description>
    <label>Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>