force-app/main/default/objects/Community_Events__c/fields/Teaser__c.field-meta.xml
<CustomField>
    <fullName>Teaser__c</fullName>
    <description>Provide a teaser description for the Event, to be displayed on the Event Listing page within the Community.</description>
    <inlineHelpText>The Teaser is shown on the Event Listing page for Events that are flagged as Public.</inlineHelpText>
    <label>Teaser</label>
    <length>140</length>
    <type>Text</type>
</CustomField>