force-app/main/default/objects/Community_Events__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Provide a URL to additional event details or an RSVP page hosted on another site.</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>