force-app/main/default/objects/Community_Events__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>Provide a Zip Code/Postal Code of the Community Event location</description>
    <label>Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>