force-app/main/default/objects/Community_Events__c/validationRules/Event_End_Less_Or_Equal_Than_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_End_Less_Or_Equal_Than_Start</fullName>
    <active>true</active>
    <description>Event_End_Less_Or_Equal_Than_Start</description>
    <errorConditionFormula>Start__c   &gt;=   End__c</errorConditionFormula>
    <errorMessage>The end date must be greater than the start date.</errorMessage>
</ValidationRule>