force-app/main/default/objects/Community_Events__c/listViews/All_Events.listView-meta.xml
<ListView>
    <fullName>All_Events</fullName>
    <columns>Name__c</columns>
    <columns>NAME</columns>
    <columns>Public__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Teaser__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Events</label>
    <language>en_US</language>
</ListView>