force-app/main/default/objects/Community_Events__c/listViews/Past_Events.listView-meta.xml
<ListView>
    <fullName>Past_Events</fullName>
    <columns>Name__c</columns>
    <columns>NAME</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Teaser__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Past Events</label>
    <language>en_US</language>
</ListView>